tests/ui/consts/const-external-macro-const-err.stderr
error[E0080]: index out of bounds: the length is 1 but the index is 1
  --> $DIR/const-external-macro-const-err.rs:12:5
   |
LL |     static_assert!(2 + 2 == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of constant value failed here
   |
   = note: this error originates in the macro `static_assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
